<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/football_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/title_border"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/soccerleague"
        android:text="@string/hello_world"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="90sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/hello_world"
        android:textAlignment="center"
        android:textSize="85sp"
        android:fontFamily="@font/soccerleaguecollege"
        android:textColor="@color/black"
        android:letterSpacing="0.1"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/soccer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/the_game"
        android:textSize="30sp"
        android:fontFamily="@font/soccerleague_italic"
        android:textColor="@color/black"
        android:letterSpacing="0.5"
        android:textAlignment="center"
        android:background="@color/white"
        android:alpha="0.8"
        app:layout_constraintTop_toBottomOf="@id/title_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/soccer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/orange"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
